# pvgpu

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: build.yml
backend/: Cargo.toml  README.md
backend/src/: command_processor.rs  config.rs  d3d11.rs  ipc.rs  main.rs  presentation.rs  protocol.rs  shmem.rs
docs/: GAMING-VM-CONFIG.md
driver/: README.md  pvgpu.sln
driver/kmd/: pvgpu.c  pvgpu.h  pvgpu.inf  pvgpu.vcxproj  pvgpu.vcxproj.filters
driver/umd/: pvgpu_umd.c  pvgpu_umd.def  pvgpu_umd.h  pvgpu_umd.vcxproj  pvgpu_umd.vcxproj.filters
protocol/: pvgpu_protocol.h
qemu-device/: README.md  meson.build  meson_options.txt  pvgpu.c  pvgpu.h
scripts/: build-release.ps1
